# fastapif1

./: .gitignore  README.md  conftest.py  database.py  drivers.py  fastapi_f1.db  full_stream.py  home.py  main.py  models.py  package-lock.json  pyproject.toml  requirements.txt  schemas.py  test.db  test_drivers.py
database/: database.py
frontend/src/components/: Header.jsx
models/: models.py
pages/: 1_add_driver.py  1_🏎️__add_driver.py  2_query_driver.py  2_query_drivers.py  3_update_driver.py  4_team_report.py  4_📰__team_report.py  5_add_team.py  6_🏁__query_teams.py  7_update_team.py
routers/: drivers.py
schema/: schemas.py
src/: database.py  fastapi_f1.db  main.py
src/config/: utils.py
src/crud/: driver.py  team.py
src/frontend/: package-lock.json
src/frontend/src/: index.js
src/frontend/src/components/: Drivers.jsx
src/models/: __init__.py  drivers.py  teams.py
src/routers/: drivers.py  teams.py
src/schema/: driver.py  team.py
src/tests/: conftest.py
src/tests/unit/routers/: test.db  test_drivers.py
src/utils/: requests.py
streamlit_utils/: config.py
tests/: conftest.py
tests/unit/routers/: test_drivers.py  test_teams.py
