[tool.poetry]
name = "fastapi-f1"
version = "0.1.0"
description = ""
authors = ["John Hughes"]
readme = "README.md"
packages = [{include = "fastapi_f1"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "0.21.1"
fastapi = "0.95.0"
pydantic = "1.10.7"
sqlalchemy = "2.0.7"
psycopg2-binary = "2.9.5"
sqlalchemy-utils = "0.40.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
